--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 01.10.2024
+  Changes:
+    - Removed dependency on stdlib.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 29.09.2024
   Bugfixes:
