--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.1
+Date: 10.10.2024
+  Changes:
+    - The default tile preset is now empty for compatability reasons.
+    - Removing a player from the game will also remove their queued calculations.
+  Bugfixes:
+    - Fixed misconfigured game states.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 06.10.2024
   Changes:
