--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.2
+Date: 13.10.2024
+  Bugfixes:
+    - Fixed a bug where a tile preset might not exist and cause an error.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 10.10.2024
   Changes:
