--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.3
+Date: 18.10.2024
+  Changes:
+    - Improved GUI
+---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 13.10.2024
   Bugfixes:
