--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.4
+Date: 18.10.2024
+  Changes:
+    - Staggered building.
+    - Copy and paste tiles with shift + right click and shift + left click.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: 18.10.2024
   Changes:
