--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.1
+Date: 26.10.2024
+  Bugfixes:
+    - Added support for elevated rails.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.0
 Date: 26.10.2024
   Changes:
