--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.2
+Date: 2024-10-30
+  Changes:
+    - Moved the configuration button to the mod-gui flow.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.1
 Date: 26.10.2024
   Bugfixes:
