--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.3
+Date: 31.10.2024
+  Changes:
+    - Changend thumbnail.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.2
-Date: 2024-10-30
+Date: 31.10.2024
   Changes:
     - Moved the configuration button to the mod-gui flow.
 ---------------------------------------------------------------------------------------------------
