--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.5
+Date: 2024-11-10
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 1.2.4
 Date: 2024-11-08
   Changes:
