--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,8 @@
 Version: 1.2.5
 Date: 2024-11-10
   Changes:
+    - Added a button to create a preset exchange string.
+    - Added a button to import a preset from an exchange string.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.4
 Date: 2024-11-08
